[gd_scene load_steps=3 format=3 uid="uid://dr7eba6ihmue2"]

[ext_resource type="Script" path="res://Components/ItemTile.gd" id="1_bw6ef"]
[ext_resource type="Texture2D" uid="uid://c6eyplrshr1ag" path="res://Assets/flat-hammer.svg" id="2_ininv"]

[node name="ItemTile" type="Control"]
custom_minimum_size = Vector2(90, 128)
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_bw6ef")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.556863, 0.34902, 0.164706, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Steel Pickaxe Of Greatness"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Container" type="Control" parent="MarginContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 44)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MarginContainer/HBoxContainer/Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ininv")
expand_mode = 2
stretch_mode = 5

[node name="Implicit1" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "10-20 Mining"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Implicit2" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "10% Ore Yield"
horizontal_alignment = 1
autowrap_mode = 2
